--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<h1>Testimonials</h1>
+		<div class="testimonial">
+			<p>This product is amazing! I Highly recommend it to anyone in need of a solution like this.</p>
+			<p class="author-name">- John Doe</p>
+		</div>
+		<div class="testimonial">
+			<p>I have been using this for a few weeks now and it has completely transformed my workflow</p>
+			<p class="author-name">- Jane Smith</p>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
